<resources>
    <string name="app_name">testwork</string>
    <string name="type_operand_one_hint">Type Operand 1</string>
    <string name="type_operant_two_hint">Type Operand 2</string>
    <string name="add_operation_text">Add</string>
    <string name="sub_operation_text">Sub</string>
    <string name="div_operation_text">Div</string>
    <string name="mul_operation_text">Mul</string>
    <string name="computationError">Error</string>
    <string name="hello_world">Hello Espresso!</string>
    <string name="change_text">Change text</string>
    <string name="type_something">type something…</string>
    <string name="open_activity_and_change_text">Open activity and change text</string>
    <string name="waiting_msg">Waiting for message…</string>
    <string name="button_open_camera">Take photo</string>
    <string name="start_private_activity">Start Private Process Activity</string>
    <string name="click_me">Click Me!</string>
    <string name="button_clicked">Button clicked!</string>
    <string name="list_selection">Selected: %1$s</string>
    <string-array name="list_items">
        <item>Espresso</item>
        <item>Doppio</item>
        <item>Macchiato</item>
        <item>Cappuccino</item>
        <item>Americano</item>
        <item>Mocha</item>
        <item>Latte</item>
    </string-array>

    <string name="pick_water">Pick body of water</string>
    <string-array name="bodies_of_water">
        <item>Pacific Ocean</item>
        <item>Atlantic Ocean</item>
        <item>Indian Ocean</item>
        <item>Southern Ocean</item>
        <item>Arctic Ocean</item>
        <item>Mediterranean Sea</item>
        <item>Caribbean Sea</item>
        <item>South China Sea</item>
        <item>Bering Sea</item>
        <item>Gulf of Mexico</item>
        <item>Okhotsk Sea</item>
        <item>East China Sea</item>
        <item>Hudson Bay</item>
        <item>Japan Sea</item>
        <item>Andaman Sea</item>
        <item>North Sea</item>
        <item>Red Sea</item>
        <item>Baltic Sea</item>
    </string-array>
</resources>